small fix for scrollbar and bookmark

--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,9 @@ body {
 .app.scrolled .bar{
     display: none;
 }
+.app.scrolled .book {
+    height: calc(100% - 2px);
+}
 
 /* Modal */
 
@@ -670,7 +673,7 @@ body {
     box-shadow: 0 0 10px #ccc;
     padding: 20px 0;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 20px);
 }
 
 .app .book > div {
